--- a/.github/workflows/nativephp-build.yml
+++ b/.github/workflows/nativephp-build.yml
@@ -20,9 +20,13 @@ jobs:
           php-version: '8.3'
           extensions: mbstring, intl, fileinfo, openssl, pdo, pdo_mysql
 
-      - name: Install Composer Dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+      # - name: Install Composer Dependencies
+      #   run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
+      - name: Install Composer Dependencies
+        run: composer update
+
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
