--- a/.github/workflows/nativephp-build.yml
+++ b/.github/workflows/nativephp-build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
-          extensions: mbstring, intl, fileinfo, openssl, pdo, pdo_mysql
+          extensions: mbstring, intl, fileinfo, openssl, pdo, pdo_mysql, zip, gd
 
       # - name: Install Composer Dependencies
       #   run: composer install --no-interaction --prefer-dist --optimize-autoloader
@@ -26,7 +26,7 @@ jobs:
       - name: Install Composer Dependencies
         run: composer update
 
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
