--- a/.github/workflows/nativephp-build.yml
+++ b/.github/workflows/nativephp-build.yml
@@ -20,10 +20,10 @@ jobs:
           php-version: '8.3'
           extensions: mbstring, intl, fileinfo, openssl, pdo, pdo_mysql, zip, gd
 
-      
+
 
       - name: Install Composer Dependencies
-        run: composer update
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
 
       - name: Setup Node.js
