--- a/.github/workflows/nativephp-build.yml
+++ b/.github/workflows/nativephp-build.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install Install NativePHP
         run: |
-          php artisan native:install --force
+          php artisan native:install 
 
 
 
